--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "bundle/DoxygenToolkit"]
-	path = bundle/DoxygenToolkit
+	path = home/.vim/bundle/DoxygenToolkit
 	url = https://github.com/mrtazz/DoxygenToolkit.vim.git
